third_party/move/move-compiler-v2/tests/checking/naming/generics_shadowing_invalid.exp

Diagnostics:
error: cannot adapt `S` to annotated type `M::S`
  ┌─ tests/checking/naming/generics_shadowing_invalid.move:7:10
  │
7 │         (s1: Self::S);
  │          ^^

error: cannot adapt `M::S` to annotated type `S`
  ┌─ tests/checking/naming/generics_shadowing_invalid.move:8:20
  │
8 │         let s: S = S {};
  │                    ^^^^

error: cannot pass `S` to a function which expects argument of type `M::S`
  ┌─ tests/checking/naming/generics_shadowing_invalid.move:9:13
  │
9 │         bar(s1);
  │             ^^

error: cannot return `M::S` from a function with result type `S`
   ┌─ tests/checking/naming/generics_shadowing_invalid.move:10:9
   │
10 │         S {}
   │         ^^^^
